--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
     "db:migrate": "pnpm drizzle-kit generate"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.1.0",
+    "@elysiajs/eden": "^1.1.1",
+    "dayjs": "^1.11.12",
     "drizzle-orm": "^0.32.0",
+    "drizzle-typebox": "^0.1.1",
     "elysia": "latest",
+    "nodemailer": "^6.9.14",
     "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
+    "@types/nodemailer": "^6.4.15",
     "bun-types": "latest",
     "drizzle-kit": "^0.23.0"
   },
